tests/negative/gold/incomplete_type_test.gold
tests/negative/incomplete_type_test.toit:8:13: error: Unexpected token while parsing type
    x / pre.:
            ^
tests/negative/incomplete_type_test.toit:12:15: error: Incomplete expression
  null is pre.
              ^
tests/negative/incomplete_type_test.toit:8:9: error: Prefix can't be used as type: 'pre'
    x / pre.:
        ^~~
tests/negative/incomplete_type_test.toit:13:3: error: Unresolved identifier: 'unresolved'
  unresolved
  ^~~~~~~~~~
Compilation failed.
